DEVELOPER-3663 Fixed z-index of SO dropdown

--- a/stylesheets/_stackoverflow.scss
+++ b/stylesheets/_stackoverflow.scss
@@ -126,6 +126,7 @@
   }
   .styled-select {
     display: inline-block;
+    z-index: 1;
   }
 }
 
